testcpu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synergychat-testcpu
  labels:
    app: synergychat-testcpu
spec:
  selector:
    matchLabels:
      app: synergychat-testcpu
  template:
    metadata:
      name: synergychat-testcpu
      labels:
        app: synergychat-testcpu
    spec:
      containers:
        - name: synergychat-testcpu
          image: bootdotdev/synergychat-testcpu:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 50m
      restartPolicy: Always
