testram-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synergychat-testram
  labels:
    app: synergychat-testram
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synergychat-testram
  template:
    metadata:
      name: synergychat-testram
      labels:
        app: synergychat-testram
    spec:
      containers:
        - name: synergychat-testram
          image: bootdotdev/synergychat-testram:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 256Mi
      restartPolicy: Always
